# Hnefatafl

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp
